--- a/templates/AnimaBlend/index.html
+++ b/templates/AnimaBlend/index.html
@@ -10,138 +10,152 @@
     <link rel="stylesheet" href="{% static "AnimaBlend/indexcss.css" %}" />
   </head>
   <body>
+    <div class="main-content">
     {% comment %} nav_bar_starts_here {% endcomment %}
-    <div class="full-nav">
-      <nav class="branding-nav">
-        <a href="">
-          <span class="dic">Dic</span><span class="tators">tators</span>
-        </a>
-      </nav>
-      <nav class="navbar">
-        <ul class="nav-links">
-          <li><a href="#about">AnimaChat</a></li>
-          <li><a href="home">AnimaBlend</a></li>
-          <li><a href="/"><img src="{% static "AnimaBlend/assets/index-images/debian.ico" %}" class="debian"></a></li>
-          <li><a href="#portfolio">Community</a></li>
-          <li><a href="#about">About</a></li>
-        </ul>
-      </nav>
-      <div class="search">
-        <form name="search-form" method="get" action="search">
-          <input type="text" placeholder="Search..." name="search">
-          <button type="submit">Go</button>
-        </form>
-      </div>
-    </div>
-    {% comment %} nav_bar_ends_here {% endcomment %} {% comment %}
-    welcome_things_start_here {% endcomment %}
-
-    <div class="welcome">
-      <div class="welcome-1">Welcome</div>
-      <div class="welcome-2">To The World</div>
-      <div class="welcome-3">of</div>
-      <div class="welcome-4">Anime</div>
-    </div>
-
-    {% comment %} AnimaChat_html_starts_here {% endcomment %}
-
-    <div class="anima-chat">
-      <div class="anima-chat-header">
-        Get Started with <span class="dic2">Anima</span
-        ><span class="tators">Chat</span>
-      </div>
-      <div class="anima-chat-container">
-        <div class="anima-chat-image">
-          <img src="{% static "AnimaBlend/assets/index-images/coolchat.png" %}">
-        </div>
-        <div class="anima-chat-text">
-          <div class="anima-chat-text1">
-            Join The <br />
-            Global <br />
-            Chat <br />
-            <span class="dic2">Anima</span><span class="tators">Chat</span>
+      <div class="landing">
+      <div class="full-nav">
+        <nav class="branding-nav">
+          <a href="">
+            <span class="dic">Dic</span><span class="tators">tators</span>
+          </a>
+        </nav>
+        <nav class="navbar">
+          <ul class="nav-links">
+            <li><a href="#about">AnimaChat</a></li>
+            <li><a href="home">AnimaBlend</a></li>
+            <li><a href="/"><img src="{% static "AnimaBlend/assets/index-images/debian.ico" %}" class="debian"></a></li>
+            <li><a href="#portfolio">Community</a></li>
+            <li><a href="#about">About</a></li>
+          </ul>
+        </nav>
+        <div class="search">
+          <form name="search-form" method="get" action="search">
+            <input type="text" placeholder="Search..." name="search">
+            <button type="submit">Go</button>
+          </form>
+          <div class="menu">
+            <img src="{% static "AnimaBlend/assets/index-images/menu.png" %}">
           </div>
         </div>
       </div>
-      <div class="home-button">
-        <a href=""><button class="button-1" role="button">Join Chat</button></a>
-      </div>
-    </div>
+      {% comment %} nav_bar_ends_here {% endcomment %} {% comment %}
+      welcome_things_start_here {% endcomment %}
 
-    {% comment %} AnimaChat_html_ends_here {% endcomment %} {% comment %}
-    paralax_background_html_starts_here {% endcomment %}
 
-    <div class="paralax-section">
-      <div class="paralax-relative">
-        <div>
-          <span class="paralax-section-heading"
-            >Join <span class="tators">Community</span>
-          </span>
+        <div class="welcome">
+          <div class="welcome1">
+            <span class="dic2">Welcome</span><br>
+            <span class="tators">To The World</span><br>
+            <span class="dic2">of</span><br>
+            <span class="tators">Anime</span>
+          </div>
+          <div class="welcome2">
+            <div class="welcome-img">
+              <img src="{% static "AnimaBlend/assets/index-images/onepiece.png" %}">
+            </div>
+          </div>
         </div>
-        <div class="paralax-text">
-          Login and Enjoy <br />
-          Our <br />
-          Community features <br />
+      </div>
+      {% comment %} AnimaChat_html_starts_here {% endcomment %}
+
+      <div class="anima-chat">
+        <div class="anima-chat-header">
+          Get Started with <span class="dic2">Anima</span
+          ><span class="tators">Chat</span>
+        </div>
+        <div class="anima-chat-container">
+          <div class="anima-chat-image">
+            <img src="{% static "AnimaBlend/assets/index-images/coolchat.png" %}">
+          </div>
+          <div class="anima-chat-text">
+            <div class="anima-chat-text1">
+              Join The <br />
+              Global <br />
+              Chat <br />
+              <span class="dic2">Anima</span><span class="tators">Chat</span>
+            </div>
+          </div>
         </div>
         <div class="home-button">
-          <a href=""><button class="button-1" role="button">Login</button></a>
+          <a href=""><button class="button-1" role="button">Join Chat</button></a>
         </div>
       </div>
-    </div>
 
-    {% comment %} paralax_background_html_ends_here {% endcomment %} 
+      {% comment %} AnimaChat_html_ends_here {% endcomment %} {% comment %}
+      paralax_background_html_starts_here {% endcomment %}
 
-
-    {% comment%} AnimeBlend_html_starts_here {% endcomment %}
-
-    <div class="anima-chat">
-      <div class="anima-chat-header">
-        <span class="dic2">Anima</span><span class="tators">Blend</span>
-      </div>
-      <div class="anima-chat-container">
-        <div class="anima-chat-image">
-          <img src="{% static "AnimaBlend/assets/index-images/anime.jpg" %}"
-          width="360px" height="300px">
-        </div>
-        <div class="anima-chat-text">
-          <div class="anima-chat-text1">
-            Explore The <br />
-            World of <br />
-            Anime <br />
-            with <br />
-            <span class="dic2">Anima</span><span class="tators">Blend</span>
+      <div class="paralax-section">
+        <div class="paralax-relative">
+          <div>
+            <span class="paralax-section-heading"
+              >Join <span class="tators">Community</span>
+            </span>
+          </div>
+          <div class="paralax-text">
+            Login and Enjoy <br />
+            Our <br />
+            Community features <br />
+          </div>
+          <div class="home-button">
+            <a href=""><button class="button-1" role="button">Login</button></a>
           </div>
         </div>
       </div>
-      <div class="home-button">
-        <a href="home"
-          ><button class="button-1" role="button">Explore Anime</button></a
-        >
+
+      {% comment %} paralax_background_html_ends_here {% endcomment %} 
+
+
+      {% comment%} AnimeBlend_html_starts_here {% endcomment %}
+
+      <div class="anima-chat">
+        <div class="anima-chat-header">
+          <span class="dic2">Anima</span><span class="tators">Blend</span>
+        </div>
+        <div class="anima-chat-container">
+          <div class="anima-chat-image">
+            <img src="{% static "AnimaBlend/assets/index-images/anime.jpg" %}"
+            width="360px" height="300px">
+          </div>
+          <div class="anima-chat-text">
+            <div class="anima-chat-text1">
+              Explore The <br />
+              World of <br />
+              Anime <br />
+              with <br />
+              <span class="dic2">Anima</span><span class="tators">Blend</span>
+            </div>
+          </div>
+        </div>
+        <div class="home-button">
+          <a href="home"
+            ><button class="button-1" role="button">Explore Anime</button></a
+          >
+        </div>
       </div>
-    </div>
 
-    {% comment %} AnimeBlend_html_ends_here {% endcomment %}
+      {% comment %} AnimeBlend_html_ends_here {% endcomment %}
 
-    {% comment %} About_section_html_starts_here {% endcomment %}
+      {% comment %} About_section_html_starts_here {% endcomment %}
 
-    <div class="about-section" id="about">
-      <div class="about-heading"><span class="dic">Ab</span><span class="tators">out</span></div>
-      <div class="about-text">
-        This site is dedicated to <br/>
-        the world of anime. We <br/>
-        provide various sub-platforms <br/>
-        like - AnimaBlend to watch <br/>
-        all the Latest and Greatest <br/>
-        anime, AnimaChat to chat <br/>
-        with random people watching <br/>
-        anime on the site, Community <br/>
-        to connect with members and <br/>
-        send messages or suggetions.
+      <div class="about-section" id="about">
+        <div class="about-heading"><span class="dic">Ab</span><span class="tators">out</span></div>
+        <div class="about-text">
+          This site is dedicated to <br/>
+          the world of anime. We <br/>
+          provide various sub-platforms <br/>
+          like - AnimaBlend to watch <br/>
+          all the Latest and Greatest <br/>
+          anime, AnimaChat to chat <br/>
+          with random people watching <br/>
+          anime on the site, Community <br/>
+          to connect with members and <br/>
+          send messages or suggetions.
+        </div>
+        <hr class="about-hr">
+        <div class="footer">&#169 2024 Dictators All rights reserved</div>
       </div>
-      <hr class="about-hr">
-      <div class="footer">&#169 2024 Dictators All rights reserved</div>
-    </div>
 
     {% comment %} About_section_html_ends_here {% endcomment %}
+    </div>
   </body>
 </html>
