--- a/templates/AnimaBlend/index.html
+++ b/templates/AnimaBlend/index.html
@@ -12,35 +12,41 @@
   <body>
     <div class="main-content">
     {% comment %} nav_bar_starts_here {% endcomment %}
-      <div class="landing">
-      <div class="full-nav">
-        <nav class="branding-nav">
-          <a href="">
+    
+    <div class="full-nav">
+      <div class="branding-nav">
+          <span class="dic">Dic</span><span class="tators">tators</span>
+      </div>
+      <input type="checkbox" id="nav-check" hidden>
+      <nav class="navbar">
+        <div class="branding-nav-mobile">
             <span class="dic">Dic</span><span class="tators">tators</span>
-          </a>
-        </nav>
-        <nav class="navbar">
-          <ul class="nav-links">
-            <li><a href="#about">AnimaChat</a></li>
-            <li><a href="home">AnimaBlend</a></li>
-            <li><a href="/"><img src="{% static "AnimaBlend/assets/index-images/debian.ico" %}" class="debian"></a></li>
-            <li><a href="#portfolio">Community</a></li>
-            <li><a href="#about">About</a></li>
-          </ul>
-        </nav>
-        <div class="search">
-          <form name="search-form" method="get" action="search">
-            <input type="text" placeholder="Search..." name="search">
-            <button type="submit">Go</button>
-          </form>
+        </div>
+        <ul class="nav-links">
+          <li><a href="#AnimaChat">AnimaChat</a></li>
+          <li><a href="home">AnimaBlend</a></li>
+          <li><a href="/"><img src="{% static "AnimaBlend/assets/index-images/debian.ico" %}" class="debian"></a></li>
+          <li><a href="#community">Community</a></li>
+          <li><a href="/#about">About</a></li>
+        </ul>
+      </nav>
+      <div class="search">
+        <form name="search-form" method="get" action="search">
+          <input type="text" placeholder="Search..." name="search">
+          <button type="submit">Go</button>
+        </form>
+        <label for="nav-check">
           <div class="menu">
             <img src="{% static "AnimaBlend/assets/index-images/menu.png" %}">
           </div>
-        </div>
+        </label>
       </div>
-      {% comment %} nav_bar_ends_here {% endcomment %} {% comment %}
-      welcome_things_start_here {% endcomment %}
+    </div>
 
+
+    {% comment %} nav_bar_ends_here {% endcomment %} {% comment %}
+    welcome_things_start_here {% endcomment %}
+    
 
         <div class="welcome">
           <div class="welcome1">
@@ -55,7 +61,7 @@
             </div>
           </div>
         </div>
-      </div>
+      {% comment %} </div> {% endcomment %}
       {% comment %} AnimaChat_html_starts_here {% endcomment %}
 
       <div class="anima-chat">
@@ -155,7 +161,7 @@
         <div class="footer">&#169 2024 Dictators All rights reserved</div>
       </div>
 
-    {% comment %} About_section_html_ends_here {% endcomment %}
+      {% comment %} About_section_html_ends_here {% endcomment %}
     </div>
   </body>
 </html>
