--- a/templates/AnimaBlend/index.html
+++ b/templates/AnimaBlend/index.html
@@ -23,11 +23,11 @@
             <span class="dic">Dic</span><span class="tators">tators</span>
         </div>
         <ul class="nav-links">
-          <li><a href="#AnimaChat">AnimaChat</a></li>
+          <li><a href="/">AnimaChat</a></li>
           <li><a href="home">AnimaBlend</a></li>
-          <li><a href="/"><img src="{% static "AnimaBlend/assets/index-images/debian.ico" %}" class="debian"></a></li>
-          <li><a href="#community">Community</a></li>
-          <li><a href="/#about">About</a></li>
+          <li><a href="/" class="active-dic"><img src="{% static "AnimaBlend/assets/index-images/zoro-logo.png" %}" class="debian"></a></li>
+          <li><a href="/">Community</a></li>
+          <li><a href="/">About</a></li>
         </ul>
       </nav>
       <div class="search">
@@ -144,7 +144,7 @@
       {% comment %} About_section_html_starts_here {% endcomment %}
 
       <div class="about-section" id="about">
-        <div class="about-heading"><span class="dic">Ab</span><span class="tators">out</span></div>
+        <div class="about-heading"><span class="dic">In</span><span class="tators">tro</span></div>
         <div class="about-text">
           This site is dedicated to <br/>
           the world of anime. We <br/>
