--- a/static/AnimaBlend/search.css
+++ b/static/AnimaBlend/search.css
@@ -104,6 +104,7 @@ body {
   }
   .card-title{
     font-size: 1.9vw;
+    margin: 8px 0;
   }
   .card-episodes{
     font-size: 1.4vw;
@@ -129,8 +130,8 @@ body {
     place-content: center;
   }
   .card {
-    width: 39vw;
-    height: 56vw;
+    width: 43vw;
+    height: 63vw;
     border-radius: 8px;
     text-align: center;
     margin: 10px;
@@ -141,7 +142,7 @@ body {
     margin: 7px 0;
   }
   .card-episodes{
-    font-size: 1.9vw;
+    font-size: 2vw;
   }
   .card-image img{
     border-radius: 8px;
