--- a/templates/AnimaBlend/play.html
+++ b/templates/AnimaBlend/play.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="{% static 'AnimaBlend/indexcss.css' %}" />
     <link rel="stylesheet" href="{% static 'AnimaBlend/search.css' %}" />
     <link rel="stylesheet" href="{% static 'AnimaBlend/details.css' %}" />
+    <link rel="stylesheet" href="{% static 'AnimaBlend/play.css' %}" />
+
   </head>
 
   <body>
@@ -49,11 +51,30 @@
     {% comment %} nav_bar_css_ends_here {% endcomment %}
 
     <div class="play-container">
-        <div class="play-stream">
-            <div class="play-episode"></div>
-            <div class="play-episode-meta"></div>
+      <div class="play-main">
+        <div class="play-video">
+
+
+          <div class="player">
+            <video class="player__video viewer" src="{{ current_episode.video_dub }}"></video>
+
+            <div class="player__controls">
+              <div class="progress">
+                <div class="progress__filled"></div>
+              </div>
+              <button class="player__button toggle" title="TogglePlay">&#9654</button>
+              <input type="range" name="volume" class="player__slider" min=0 max="1" step="0.05" value="1">
+              <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1">
+              <button data-skip="-10" class="player__button">« 10s</button>
+              <button data-skip="+10" class="player__button">10s »</button>
+            </div>
+          </div>
+
+
         </div>
+      </div>
     </div>
-    
+
+    <script src="{% static "AnimaBlend/player.js" %}"></script>
   </body>
 </html>
