created a custom video player

--- a/static/AnimaBlend/css/details.css
+++ b/static/AnimaBlend/css/details.css
@@ -6,7 +6,7 @@ body {
 
 
 .details-main{
-    background-image: url(assets/details-images/search.jpg);
+    background-image: url(../assets/details-images/search.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     display: flex;
