--- a/templates/AnimaBlend/details.html
+++ b/templates/AnimaBlend/details.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Details</title>
-    <link rel="stylesheet" href="{% static 'AnimaBlend/indexcss.css' %}" />
-    <link rel="stylesheet" href="{% static 'AnimaBlend/search.css' %}" />
-    <link rel="stylesheet" href="{% static 'AnimaBlend/details.css' %}" />
+    <link rel="stylesheet" href="{% static 'AnimaBlend/css/indexcss.css' %}" />
+    {% comment %} <link rel="stylesheet" href="{% static 'AnimaBlend/css/search.css' %}" /> {% endcomment %}
+    <link rel="stylesheet" href="{% static 'AnimaBlend/css/details.css' %}" />
   </head>
 
   <body>
