--- a/templates/AnimaBlend/index.html
+++ b/templates/AnimaBlend/index.html
@@ -7,7 +7,7 @@
     <title>Dictators</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="{% static "AnimaBlend/indexcss.css" %}" />
+    <link rel="stylesheet" href="{% static "AnimaBlend/css/indexcss.css" %}" />
   </head>
   <body>
     <div class="main-content">
