--- a/templates/AnimaBlend/play.html
+++ b/templates/AnimaBlend/play.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Details</title>
-    <link rel="stylesheet" href="{% static 'AnimaBlend/indexcss.css' %}" />
-    <link rel="stylesheet" href="{% static 'AnimaBlend/search.css' %}" />
-    <link rel="stylesheet" href="{% static 'AnimaBlend/details.css' %}" />
-    <link rel="stylesheet" href="{% static 'AnimaBlend/play.css' %}" />
+    <link rel="stylesheet" href="{% static 'AnimaBlend/css/indexcss.css' %}" />
+    {% comment %} <link rel="stylesheet" href="{% static 'AnimaBlend/css/search.css' %}" /> {% endcomment %}
+    {% comment %} <link rel="stylesheet" href="{% static 'AnimaBlend/css/details.css' %}" /> {% endcomment %}
+    <link rel="stylesheet" href="{% static 'AnimaBlend/css/play.css' %}" />
+    <link rel="stylesheet" href="{% static 'AnimaBlend/css/player.css' %}" />
 
   </head>
 
@@ -54,27 +55,29 @@
       <div class="play-main">
         <div class="play-video">
 
-
-          <div class="player">
-            <video class="player__video viewer" src="{{ current_episode.video_dub }}"></video>
-
-            <div class="player__controls">
-              <div class="progress">
-                <div class="progress__filled"></div>
-              </div>
-              <button class="player__button toggle" title="TogglePlay">&#9654</button>
-              <input type="range" name="volume" class="player__slider" min=0 max="1" step="0.05" value="1">
-              <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1">
-              <button data-skip="-10" class="player__button">« 10s</button>
-              <button data-skip="+10" class="player__button">10s »</button>
+          <div class="video-container" id="videoContainer">
+            <video id="video" class="video" src="{{ current_episode.video_dub }}"></video>
+    
+            <div class="progress-container" id="progressContainer">
+                <div class="progress" id="progress"></div>
             </div>
-          </div>
+    
+            <div class="controls" id="controls">
+                <button class="btn" id="playPause">▶</button>
+                <button class="btn" id="skipBack">« 10s</button>
+                <button class="btn" id="skipForward">10s »</button>
+                <input type="range" id="volume" min="0" max="1" step="0.05" value="1">
+                <button class="btn" id="fullScreen">⛶</button>
+            </div>
+        </div>
+
+            
 
 
         </div>
       </div>
     </div>
 
-    <script src="{% static "AnimaBlend/player.js" %}"></script>
+    <script src="{% static "AnimaBlend/js/player.js" %}"></script>
   </body>
 </html>
