--- a/templates/AnimaBlend/search.html
+++ b/templates/AnimaBlend/search.html
@@ -7,8 +7,8 @@
     <title>Search</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="{% static "AnimaBlend/indexcss.css" %}" />
-    <link rel="stylesheet" href="{% static "AnimaBlend/search.css" %}" />
+    <link rel="stylesheet" href="{% static "AnimaBlend/css/indexcss.css" %}" />
+    <link rel="stylesheet" href="{% static "AnimaBlend/css/search.css" %}" />
   </head>
   <body>
     {% comment %} nav_bar_starts_here {% endcomment %}
