--- a/templates/AnimaBlend/play.html
+++ b/templates/AnimaBlend/play.html
@@ -55,22 +55,25 @@
       <div class="play-main">
         <div class="play-video">
 
+         
           <div class="video-container" id="videoContainer">
             <video id="video" class="video" src="{{ current_episode.video_dub }}"></video>
-    
-            <div class="progress-container" id="progressContainer">
-                <div class="progress" id="progress"></div>
-            </div>
-    
-            <div class="controls" id="controls">
-                <button class="btn" id="playPause">▶</button>
-                <button class="btn" id="skipBack">« 10s</button>
-                <button class="btn" id="skipForward">10s »</button>
-                <input type="range" id="volume" min="0" max="1" step="0.05" value="1">
-                <button class="btn" id="fullScreen">⛶</button>
+        
+            <!-- New wrapper for controls and progress bar -->
+            <div class="controls-wrapper">
+                <div class="progress-container" id="progressContainer">
+                    <div class="progress" id="progress"></div>
+                </div>
+                <div class="controls" id="controls">
+                    <button class="btn" id="playPause">▶</button>
+                    <button class="btn" id="skipBack">« 10s</button>
+                    <button class="btn" id="skipForward">10s »</button>
+                    <input type="range" id="volume" min="0" max="1" step="0.05" value="1">
+                    <button class="btn" id="fullScreen">⛶</button>
+                </div>
             </div>
         </div>
-
+        
             
 
 
