--- a/static/AnimaBlend/css/player.css
+++ b/static/AnimaBlend/css/player.css
@@ -2,8 +2,8 @@
 .video-container {
   margin: auto;
   position: relative;
-  max-width: 800px;
-  width: 100%;
+  /* max-width: 800px; */
+  max-width: 100%;
   background-color: #000;
 }
 
@@ -47,7 +47,7 @@ video {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 10px;
+  /* padding: 10px; */
   background-color: rgba(51, 51, 51, 0.7);
   opacity: 1;
   visibility: visible;
